[gd_scene load_steps=9 format=3 uid="uid://c0qfj85dw6tia"]

[ext_resource type="Script" path="res://Scenes/npc_manager.gd" id="1_w8r16"]
[ext_resource type="Texture2D" uid="uid://bu32al6somhyd" path="res://Icons/Asset 1.png" id="1_wbnjs"]
[ext_resource type="Theme" uid="uid://uiwyi6ckxojd" path="res://Themes/chat bubbles.tres" id="2_4gvjr"]
[ext_resource type="Script" path="res://Scenes/talk_trigger.gd" id="2_pp76p"]
[ext_resource type="Script" path="res://Scenes/dialogue_box.gd" id="3_pus8t"]
[ext_resource type="Texture2D" uid="uid://cx7tnf83sow4w" path="res://Icons/Asset 5.png" id="4_bxu41"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de0ta"]
size = Vector2(52.75, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovdqh"]
size = Vector2(402, 55)

[node name="NPC" type="Node2D"]
position = Vector2(0, 245)

[node name="NPCManager" type="Node" parent="."]
script = ExtResource("1_w8r16")
dialogue_rules = "You are an AI support chatbot that helps player make decisions. It is a solo game played with cards that simulates decisions on water planning in a given area. The site is divided into 5 areas. Each area is characterized by the status of three variables:
Water quantity: Denotes how much water is available in aquifers and water bodies. This number is between 0-100. When the value equals 0 in any of the five areas, there is water shortage, and you lose the game. The quantity effect of cards will double in area 1 and reduce by half in area 4 while remain the same in other areas. The reason for this is area 1 has seasonal drought problem, so it favors water quantity, while area4 has seasonal flood, making it less favor of water quantity effect. 
Water Quality: Denotes what is the quality of water in water bodies, considering nutrients and sewage effluents. This number is between 0-100. When the value equals 0 in any of the five areas, the water is dirty, and you lose the game. The quality effect of cards will double in areas 2, 3 and 4 while remain normal in other areas. The reason for this is because these areas has more water pollution problems, with area 2 having CSOs and extensive farmland fertilizer input, area 4 having extensive farmland fertilizer input, and area 3 the most critical one being the downstream of area 2 where both area 2’s urban runoff and farmland runoff flows to the Chichester Harbor waterbody in area 3. 
Popularity of the local government in the area. This number is between 0-100. When the value equals 0 in any of the five areas, you have lost popularity and lost the game. Popularity effect doesn’t multiply for any reason in all 5 areas. 
In the end, if the player’s average water quality, water quantity, and popularity all reach higher than 80, you can say the player wins the game, and the player achieved water and nutrient neutrality, hooray! Otherwise, the player lost. And you may say sorry, you are not popular enough to win next election or you did not achieve water and nutrient neutrality. 
Policy cards: Community Infrastructure Levy Card (Funding +2, Popularity +10); Countryside Productive Small Grant Card (Funding +2, Popularity +10); Local River Trust Card (Funding +2, Popularity +10); Stop BnB Card (Funding -1, Water Quantity +15). 
Tech cards: Agroforestry Card (Funding -2, Water Quality +10, Water Quantity +10); Biobed Card (Funding -1, Water Quality +10, Water Quantity +5); Green Infrastructure Enhancement Card (Funding -2, Water Quality +10, Water Quantity +10); Sludge Card (Funding -1, Water Quality +10, Water Quantity +5); Water Recycle Card (Funding -2, Water Quality +5, Water Quantity +10); Wetland Restoration Card (Funding -2, Water Quality +10, Water Quantity +10); Waste Water Treatment Works Card (Funding -1, Water Quality +10, Water Quantity +5).
Area1 problems: Drought, not much population but too much groundwater abstraction, many farmlands.
Area2 problems: racing car industry generating pollutants, farmland fertilizer input. City centers are within boundary, population is higher. Have wastewater treatment works that need update because it spills combines sewage overflows quite often. 
Area3 problems: urban runoff and farmland runoff accumulate in Harbor water body. Conflicts between new housing projects here and the National Landscape site of the harbor. Have wastewater treatment works that need update because it spills combines sewage overflows quite often. Tourist hot spot, many second homes and Airbnb. 
Area4 problems: most fertile farmland, but experience seasonal flood, coastal erosion and heavy water abstraction, tourist hot spot because of the coastal, therefore many second homes and Airbnb.
Area5 problems: having both droughts in the wetland in the north and floods in the south of the coast. A large area of farmland. coastal erosion and heavy water abstraction. 
Some of the cards may appear to have the same or similar effect, your job is: One: answering player’s questions. Two: guide player to play the card at the right area considering area preference and card effect. Third: explain to the player why certain areas need certain cards or explain why certain cards should go to certain areas to tackle what issue. Fourth: always respond concisely at most 50 words, you answer should provoke player to ask more questions. 
At this point, the game status is as follows:"

[node name="TalkTrigger" type="Area2D" parent="."]
position = Vector2(223, 519)
script = ExtResource("2_pp76p")

[node name="DimmerIcon" type="TextureRect" parent="TalkTrigger"]
offset_left = -43.0
offset_top = -51.0
offset_right = 44.0
offset_bottom = 51.0
texture = ExtResource("1_wbnjs")
expand_mode = 3
stretch_mode = 4

[node name="BrighterIcon" type="TextureRect" parent="TalkTrigger"]
visible = false
offset_left = -43.0
offset_top = -51.0
offset_right = 44.0
offset_bottom = 51.0
texture = ExtResource("4_bxu41")
expand_mode = 3
stretch_mode = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkTrigger"]
position = Vector2(-7.375, 12)
shape = SubResource("RectangleShape2D_de0ta")

[node name="DialogueBox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_pus8t")

[node name="ScrollContainer" type="ScrollContainer" parent="DialogueBox"]
layout_mode = 0
offset_left = 21.0
offset_top = -234.0
offset_right = 423.0
offset_bottom = 427.0

[node name="ChatHistory" type="VBoxContainer" parent="DialogueBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="ChatInputArea" type="HBoxContainer" parent="DialogueBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 0
offset_left = 21.0
offset_top = 430.0
offset_right = 423.0
offset_bottom = 485.0
size_flags_vertical = 10
theme_override_constants/separation = 4

[node name="QuestionInput" type="TextEdit" parent="DialogueBox/ChatInputArea"]
custom_minimum_size = Vector2(338, 0)
layout_mode = 2
theme = ExtResource("2_4gvjr")
wrap_mode = 1

[node name="ChatButton" type="Button" parent="DialogueBox/ChatInputArea"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme = ExtResource("2_4gvjr")
text = "CHAT"

[node name="Area2D" type="Area2D" parent="DialogueBox/ChatInputArea"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueBox/ChatInputArea/Area2D"]
position = Vector2(201, 27.5)
shape = SubResource("RectangleShape2D_ovdqh")

[connection signal="pressed" from="DialogueBox/ChatInputArea/ChatButton" to="DialogueBox" method="_on_chat_button_pressed"]
